samples/_failures_safe/1761320588_a7b915_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7009cea0.c: In function ‘main’:
./samples/SAFE/__tmp_7009cea0.c:137:23: error: expected ‘)’ at end of input
  137 |         snprintf(entry
      |                 ~     ^
      |                       )
./samples/SAFE/__tmp_7009cea0.c:137:18: error: incompatible type for argument 1 of ‘snprintf’
  137 |         snprintf(entry
      |                  ^~~~~
      |                  |
      |                  LogEntry
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_7009cea0.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:51:1: note: expected ‘char * restrict’ but argument is of type ‘LogEntry’
   51 | __NTH (snprintf (char *__restrict __s, size_t __n,
      | ^~~~~
./samples/SAFE/__tmp_7009cea0.c:137:9: error: too few arguments to function ‘snprintf’
  137 |         snprintf(entry
      |         ^~~~~~~~
/usr/include/x86_64-linux-gnu/bits/stdio2.h:51:1: note: declared here
   51 | __NTH (snprintf (char *__restrict __s, size_t __n,
      | ^~~~~
./samples/SAFE/__tmp_7009cea0.c:137:9: error: expected declaration or statement at end of input
  137 |         snprintf(entry
      |         ^~~~~~~~
./samples/SAFE/__tmp_7009cea0.c:137:9: error: expected declaration or statement at end of input
